--- a/hellokube/kubernetes.yaml
+++ b/hellokube/kubernetes.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: system-deployment
+  name: hello-deployment
   labels:
-    app: system
+    app: hello
 spec:
   selector:
     matchLabels:
-      app: system
+      app: hello
   template:
     metadata:
       labels:
-        app: system
+        app: hello
     spec:
       containers:
-      - name: system-container
-        image: system:1.0-SNAPSHOT
+      - name: hello-container
+        image: hello:v0.1
         ports:
         - containerPort: 9080
         readinessProbe:
@@ -30,21 +30,21 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: inventory-deployment
+  name: count-deployment
   labels:
-    app: inventory
+    app: count
 spec:
   selector:
     matchLabels:
-      app: inventory
+      app: count
   template:
     metadata:
       labels:
-        app: inventory
+        app: count
     spec:
       containers:
-      - name: inventory-container
-        image: inventory:1.0-SNAPSHOT
+      - name: count-container
+        image: count:v0.1
         ports:
         - containerPort: 9080
         readinessProbe:
@@ -59,11 +59,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: system-service
+  name: hello-service
 spec:
   type: NodePort
   selector:
-    app: system
+    app: hello
   ports:
   - protocol: TCP
     port: 9080
@@ -73,11 +73,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: inventory-service
+  name: count-service
 spec:
   type: NodePort
   selector:
-    app: inventory
+    app: count
   ports:
   - protocol: TCP
     port: 9080
